<resources>
    <string name="app_name">DogTranslate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communicate_with_your_dog">Communicate with \n your dog</string>
    <string name="call_your_beloved_dog">Call your beloved dog</string>
    <string name="next">Next</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="menu_item_sound">Sounds</string>
    <string name="menu_item_translator">Translator</string>
    <string name="menu_item_training">Training</string>
    <string name="menu_item_whistle">Whistle</string>
    <string name="label_feature">Feature</string>
    <string name="label_language">Language</string>
    <string name="label_default_device">Default device</string>
    <string name="label_share">Share</string>
    <string name="label_rate">Rate</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="label_introduce">Today is a meaningful day as I realize that speaking to my dog is not just about words, but also a way to express love and understanding. With this app, we can now chat with our furry companions.</string>
    <string name="label_press_to_record_vocals">Press to record vocals</string>
    <string name="label_close">Close</string>
    <string name="label_translate_result">Translate result</string>
    <string name="label_doing">What are you doing?</string>
    <string name="label_hi">Hi, have a good day!</string>
    <string name="label_happy">I’m happy that you came in to my life</string>
    <string name="label_love">I feel I fall in love right now</string>
    <string name="label_happy_walk">I’m glaf I’m going for a walk</string>
    <string name="label_dance">I’m happy and I want to dance</string>
    <string name="label_hand_clap">You so smart, my fence.</string>
    <string name="label_hi_fence">I will jump over the fence</string>
    <string name="label_super_argry">Don’t touch this!</string>
    <string name="label_argry">I’m angry with my cat.</string>
    <string name="label_scare">Why you so angry...</string>
    <string name="label_cry">I lay and cried for 2 days :(</string>
    <string name="label_cry_lying">"Mmm... i don’t want play with you now :( "</string>
    <string name="label_yes">Yes</string>
    <string name="label_wow">So surprise :0</string>
    <string name="label_pet">I love you so much, my fence</string>
    <string name="label_begging">I’m hungry, someone give me food!</string>
    <string name="label_want_sleep">Good night!</string>
    <string name="label_yeah">Yeah! I like that feeling!</string>
    <string name="label_lie">Haiz, don’t want to do anything.</string>
    <string name="label_startle">Hey! What happened!? D:</string>
    <string name="label_scratch">You scratch their back and they will scratch yours!</string>
    <string name="label_shy">I’ve been shy since i was a kid</string>
    <string name="label_exhausted">I’m so tired :(</string>
    <string name="label_no">No</string>
    <string name="label_sad">I am feel so sad</string>
    <string name="language">English</string>
    <string name="label_dog_translate">Dog Translate</string>
    <string name="label_sound_hi">Hi\n</string>
    <string name="label_sound_wonder">Wonder</string>
    <string name="label_sound_happy">Happy</string>
    <string name="label_sound_Love">Love</string>
    <string name="label_sound_happy_walk">Happy Walk</string>
    <string name="label_sound_dance">Dance</string>
    <string name="label_sound_agree">Agree</string>
    <string name="label_sound_hand_clap">Hand Clap</string>
    <string name="label_sound_hi_fence">Hi fence</string>
    <string name="label_sound_yes">Yes</string>
    <string name="label_sound_no">No</string>
    <string name="label_sound_wow">Wow</string>
    <string name="label_sound_sad">Sad</string>
    <string name="label_sound_cry">Cry</string>
    <string name="label_sound_cry_lying">Cry Lying</string>
    <string name="label_sound_pet">Pet</string>
    <string name="label_sound_begging">Begging</string>
    <string name="label_sound_want_sleep">Want Sleep</string>
    <string name="label_sound_yeah">Yeah</string>
    <string name="label_sound_lie">Lie</string>
    <string name="label_sound_startle">Startle</string>
    <string name="label_sound_sick">Sick</string>
    <string name="label_sound_exhausted">Exhausted</string>
    <string name="label_sound_scared">Scared</string>
    <string name="label_sound_angry">Angry</string>
    <string name="label_sound_super_angry">Super Angry</string>
    <string name="we_are_working_hard_for_a_better_user_experience">We are working hard for a better user experience.</string>
    <string name="we_d_greatly_appreciate_if_you_can_rate_us">We’d greatly appreciate if you can rate us.</string>
    <string name="The_best_we_can_get">The best we can get</string>
    <string name="label_oh_no">Oh, no</string>
    <string name="lablel_please_leave_as_some_feedback">Please leave as some feedback</string>
    <string name="label_thanks_for_your_rating">Thanks for your rating</string>
    <string name="label_we_like_you_too">We like you too!</string>
    <string name="Writing_something">Writing something</string>
    <string name="label_log_out">Log out</string>
    <string name="maybe_later">Maybe later</string>
    <string name="rate">Rate</string>
    <string name="loop">Loop</string>
    <string name="_00_00">00:00</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="the_caucasian_shepherd_dog_is_a_large_and_powerful_breed_of_dog_from_the_caucasus_mountains_region_these_dogs_are_large_in_size_with_a_thick_double_coat_to_protect_them_from_the_cold_they_have_a_regal_bearing_with_a_proud_and_confident_demeanor_they_are_highly_intelligent_and_loyal_making_them_excellent_guard_dogs_they_are_courageous_and_alert_with_an_instinct_to_protect_their_family_and_property_they_are_highly_trainable_but_require_firm_and_consistent_training">The Caucasian Shepherd Dog is a large and powerful breed of dog from the Caucasus Mountains region. These dogs are large in size, with a thick double coat to protect them from the cold. They have a regal bearing, with a proud and confident demeanor. They are highly intelligent and loyal, making them excellent guard dogs. They are courageous and alert, with an instinct to protect their family and property. They are highly trainable, but require firm and consistent training.</string>
    <string name="life">Life</string>
    <string name="male_weight">Male weight</string>
    <string name="female_weight">Female weight</string>
    <string name="hypoallergenic">Hypoallergenic</string>
</resources>