<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:srcCompat="@drawable/drop_shadow_rate_0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:elevation="8dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_dog_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="2dp"
        app:cardBackgroundColor="#FAC576"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_are_working_hard_for_a_better_user_experience"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_d_greatly_appreciate_if_you_can_rate_us"
                android:textColor="#000000"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RatingBar
                    android:id="@+id/rtb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:numStars="5"
                    android:progressBackgroundTint="#000000"
                    android:progressTint="#FA6B1B"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:secondaryProgressTint="#000000"
                    android:stepSize="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/The_best_we_can_get"
                    android:textColor="#1D88DD"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rtb" />

                <EditText
                    android:id="@+id/editFeedback"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:gravity="center"
                    android:hint="@string/Writing_something"
                    android:importantForAutofill="no"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/textBest"
                    tools:ignore="TextFields" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editFeedback">

                    <TextView
                        android:id="@+id/btnMaybeLater"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/btn_background"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/maybe_later"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/btnRate"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/btn_background"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/rate"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>