<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        tools:context=".ui.showsounddog.ShowSoundDogFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/img_bg" />

        <com.example.dogtranslate.ui.widget.ActionBarHeaderCommon
            android:id="@+id/abShowSoundDog"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            app:src_one="@drawable/ic_back"
            app:src_one_enable="true"
            app:text_view_one="@string/hello_blank_fragment"
            app:text_view_one_enable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/abShowSoundDog"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_toStartOf="@id/switchCompat"
                    android:fontFamily="@font/bvp_medium"
                    android:paddingEnd="5dp"
                    android:text="@string/label_introduce"
                    android:textColor="#7C7C7A"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="5dp"
                    android:text="@string/loop"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView3"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:thumb="@drawable/thumb_selector"
                    app:track="@drawable/track_selector" />

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgView"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:scaleType="fitXY" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp">

                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/_00_00"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_00_00"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:importantForAccessibility="no"
                    android:padding="4dp"
                    android:src="@drawable/ic_play_sound" />

                <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/play"
                    android:maxHeight="20dp"
                    android:minHeight="20dp"
                    android:padding="2dp"
                    android:progressDrawable="@drawable/sound_seekbar_style"
                    android:splitTrack="false"
                    android:thumb="@drawable/sound_custom_thumb" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>